新增菜品业务代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: oss-cn-qingdao.aliyuncs.com
+    access-key-id: LTAI5tRqNf5HmrE8iT24br6J
+    access-key-secret: qSg26ZQHcMbHK0NH2SUzOP1E3VgdwH
+    bucket-name: waimai-7758
