--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -42,6 +42,13 @@ sky:
     admin-ttl: 31536000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+    user-secret-key: gwstakeout
+    user-token-name: authentication
+    user-ttl: 31536000000
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
   alioss:
     endpoint: ${sky.alioss.endpoint}
     access-key-id: ${sky.alioss.access-key-id}
